# rappi-analysis-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: agent.py  chart_generator.py  data_loader.py  insights.py  main.py  report_generator.py  report_renderer.py
app/tests/: test_agent.py  test_report_generator.py  test_report_renderer.py
data/: ORDERS.csv  SUMMARY.csv
docs/: 1_data_layer.md  2_agent_layer.md  3_ insights_layer.md  4_chart_layer.md  5_report_layer.md  ARCHITECTURE.md  F&T_decisions.md  arch.md  query_engine.md
tests/: test_agent.py  test_data_loader.py
ui/: index.html
