[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-and-insights-ai-system"
version = "0.1.0"
description = "Chatbot and Insights AI System for Rappi Data Analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
